# difussion_bootcamp

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  pyproject_old.txt  requirements.txt  requirements_old.txt
deloitte_team/single_table_synthesis/: Data Preparation.ipynb  Deloitte Data Preprocess.ipynb  data_preparation.py  evaluate_synthetic_data_FS1.ipynb  tabddpm_implementation.ipynb  tabsyn_aml_implementation.ipynb  tabsyn_aml_implementation_FS1.ipynb
deloitte_team/single_table_synthesis/.ipynb_checkpoints/: tabddpm_implementation-checkpoint.ipynb  tabsyn_aml_implementation_FS1-checkpoint.ipynb
deloitte_team/single_table_synthesis/data_info/: IBM_AML_FeatureEngineered.json  IBM_AML_FeatureEngineered_FS1.json  adult.json  aml.json  beijing.json  magic.json
deloitte_team/single_table_synthesis/scripts/: process_dataset.py  process_dataset_original.py
deloitte_team/single_table_synthesis/src/: data.py  util.py
deloitte_team/single_table_synthesis/workspace/: sc_metric_cache_model_oneclass_1818689393591651273_3.9.12.bkp  sc_metric_cache_model_oneclass_4888751050155840469_3.9.12.bkp  sc_metric_cache_stats_alpha_precision_1236245704319044495_2800350872227055870_mean_3.9.12.bkp  sc_metric_cache_stats_alpha_precision_4936836974998785132_6902876452993875366_mean_3.9.12.bkp  sc_metric_cache_stats_alpha_precision_5096174100635538457_1522269181369039045_mean_3.9.12.bkp
docs/prereads/: README.md
docs/slides/: README.md
docs/technical_onboarding/: README.md
reference_implementations/tabular_reference_impelementation/: README.md  ToDo
reference_implementations/tabular_reference_impelementation/code/: README.md  evaluate_synthetic_data.ipynb  tabddpm_implementation.ipynb  utils.py
reference_implementations/tabular_reference_impelementation/multi_table_synthesis/: .gitignore  ClavaDDPM.ipynb  README.md  complex_pipeline.py  demo.ipynb  gen_multi_report.py  pipeline_modules.py  pipeline_utils.py  requirements.txt  run.py
reference_implementations/tabular_reference_impelementation/single_table/: evaluate_synthetic_data.ipynb  tabddpm_implementation.ipynb  tabsyn_implementation.ipynb
reference_implementations/tabular_reference_impelementation/single_table_synthesis/: README.md  evaluate_synthetic_data.ipynb  tabsyn_implementation.ipynb
reference_implementations/tabular_reference_impelementation/tabsyn/: Untitled.ipynb  adult-tabsyn-12756237.err  adult-tabsyn-12756237.out  adult-tabsyn-12756442.err  adult-tabsyn-12756442.out  adult-tabsyn-12756468.err  adult-tabsyn-12756468.out  beijing-tabsyn-12756238.err  beijing-tabsyn-12756238.out  beijing-tabsyn-12756444.err  beijing-tabsyn-12756444.out  beijing-tabsyn-12756469.out  default-tabsyn-12756239.err  default-tabsyn-12756239.out  default-tabsyn-12756443.err  default-tabsyn-12756443.out  default-tabsyn-12756470.err  default-tabsyn-12756470.out  download_dataset.py  eval_impute.py  impute.py  magic-tabsyn-12756240.err  magic-tabsyn-12756240.out  magic-tabsyn-12756446.err  magic-tabsyn-12756446.out  magic-tabsyn-12756471.err  magic-tabsyn-12756471.out  main.py  news-tabsyn-12756241.out  news-tabsyn-12756445.err  news-tabsyn-12756445.out  news-tabsyn-12756472.out  process_dataset.py  requirements.txt  shoppers-tabddpm-12756236.err  shoppers-tabsyn-12756242.err  (+7 more)
reference_implementations/time_series_reference_impelementation/: README.md  ToDo
utils/: random.py
(+209 files in other folders)
