[tool.poetry]
name = "diffusion-models-bootcamp"
version = "0.1.0"
description = "Diffusion models for tabular data and time series"
authors = ["Vector AI Engineering <fl4health@vectorinstitute.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
