[tool.poetry]
name = "diffusion-models-bootcamp"
version = "0.1.0"
description = "Diffusion models for tabular data and time series"
authors = ["Vector AI Engineering <fl4health@vectorinstitute.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.7.0"
ipykernel = "^6.29.4"


[tool.poetry.group.tab_synth.dependencies]
scikit-learn = "1.5.0"
absl-py = "2.1.0"
accelerate = "0.31.0"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
asttokens = "2.4.1"
async-timeout = "4.0.3"
attrs = "23.2.0"
bleach = "6.1.0"
category-encoders = "2.6.3"
certifi = "2024.6.2"
charset-normalizer = "3.3.2"
click = "7.0"
cmake = "3.29.5.1"
colorama = "0.4.6"
comm = "0.2.2"
contextlib2 = "21.6.0"
contourpy = "1.2.1"
cycler = "0.12.1"
datasets = "2.20.0"
debugpy = "1.8.1"
decorator = "5.1.1"
dill = "0.3.8"
et-xmlfile = "1.1.0"
exceptiongroup = "1.2.1"
executing = "2.0.1"
faker = "25.8.0"
filelock = "3.15.1"
fonttools = "4.53.0"
frozenlist = "1.4.1"
fsspec = "2024.5.0"
graphviz = "0.20.3"
huggingface-hub = "0.23.4"
icecream = "2.1.3"
idna = "3.7"
imbalanced-learn = "0.12.3"
importlib-metadata = "7.1.0"
importlib-resources = "6.4.0"
ipykernel = "6.29.4"
ipython = "8.18.1"
jedi = "0.19.1"
jinja2 = "3.1.4"
joblib = "1.4.2"
jupyter-client = "8.6.2"
jupyter-core = "5.7.2"
kaggle = "1.6.14"
kiwisolver = "1.4.5"
lit = "18.1.7"
markupsafe = "2.1.5"
matplotlib = "3.9.0"
matplotlib-inline = "0.1.7"
ml-collections = "0.1.1"
mpmath = "1.3.0"
multidict = "6.0.5"
multiprocess = "0.70.16"
nest-asyncio = "1.6.0"
networkx = "3.2.1"
numpy = "1.26.4"
openpyxl = "3.1.4"
packaging = "24.1"
pandas = "2.2.2"
parso = "0.8.4"
patsy = "0.5.6"
peft = "0.11.1"
pexpect = "4.9.0"
pillow = "10.3.0"
platformdirs = "4.2.2"
plotly = "5.22.0"
ply = "3.11"
prdc = "0.2"
progressbar2 = "4.4.2"
prompt-toolkit = "3.0.47"
psutil = "5.9.8"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyarrow = "16.1.0"
pyarrow-hotfix = "0.6"
pydantic = "2.0.3"
pydantic-core = "2.3.0"
pygments = "2.18.0"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
python-slugify = "8.0.4"
python-utils = "3.8.2"
pytz = "2024.1"
pyyaml = "6.0.1"
pyzmq = "26.0.3"
quantiphy = "2.20"
regex = "2024.5.15"
requests = "2.32.3"
safetensors = "0.4.3"
scipy = "1.13.1"
setuptools-scm = "8.1.0"
six = "1.16.0"
stack-data = "0.6.3"
statsmodels = "0.14.2"
sympy = "1.12.1"
tabulate = "0.9.0"
tenacity = "8.3.0"
text-unidecode = "1.3"
threadpoolctl = "3.5.0"
tokenizers = "0.19.1"
tomli = "2.0.1"
tomli-w = "1.0.0"
torch = "2.0.1"
torchaudio = "2.0.2"
torchvision = "0.15.2"
tornado = "6.4.1"
tqdm = "4.66.4"
traitlets = "5.14.3"
transformers = "4.41.2"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.1"
wcwidth = "0.2.13"
webencodings = "0.5.1"
xgboost = "2.0.3"
xlrd = "2.0.1"
xxhash = "3.4.1"
yarl = "1.9.4"
zero = "0.9.2"
zipp = "3.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
